--- a/src/storybook-ui/index.html
+++ b/src/storybook-ui/index.html
@@ -11,6 +11,6 @@
   src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
   crossorigin="anonymous"></script>
-  <script src="/index.js"></script>
+  <script src="/main.js"></script>
 </body>
 </html>
